# laplace-bayesopt

./: .gitignore  .pdm-python  README.md  makefile  pyproject.toml  setup.cfg
examples/: multiobjective.py  multitask.py  singletask.py
examples/botorch/: experiment.py
examples/olympus/: experiment.py  laplace_olympus.py
laplace_bayesopt/: acqf.py  botorch.py
tests/botorch/: test_laplace_botorch.py
