[project]
name = "laplace-bayesopt"
version = "0.1.7"
description = "Bayesian optimization interface for the laplace-torch library"
authors = [{ name = "Agustinus Kristiadi", email = "agustinus@kristia.de" }]
dependencies = [
    "torch>=2.0",
    "laplace-torch>=0.2.1",
    "botorch>=0.10.0",
    "pandas>=2.2.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.2",
    "coveralls>=4.0.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.1",
    "codecov>=2.1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# Adds isort ("I") and pylint errors and warning ("PLE", "PLW") to defaults.
select = ["E4", "E7", "E9", "F", "I", "PLE", "PLW"]
# Ignore pylint's overwritten loop variable by assignment error
# Skip "Module level import not at top of file"
ignore = ["PLW2901", "E402"]

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
