###############################################################################
#                                 Main library                                #
###############################################################################

[metadata]
name = laplace-bayesopt
version = 0.1
author = Agustinus Kristiadi
url = https://github.com/wiseodd/laplace-bayesopt
project_urls =
    Bug Tracker = https://github.com/wiseodd/laplace-bayesopt/issues
description = Bayesian optimization interface for the laplace-torch library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
# Dependencies of the project (semicolon/line-separated):
install_requires =
    torch
    torchvision
    torchaudio
    laplace-torch
    backpack-for-pytorch
    asdfghjkl
    opt_einsum
    botorch
    gpytorch
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.7

[options.packages.find]
exclude = tests*

###############################################################################
#                           Development dependencies                          #
###############################################################################

[options.extras_require]
# Dependencies needed to run the tests  (semicolon/line-separated)
tests =
    pytest
    pytest-cov
    coveralls
    scipy
